--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
+    "passport-facebook-token": "^3.3.0",
+    "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0"
   }
 }
