--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "passport": "^0.4.1",
     "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "passport-kakao-token": "^0.1.5",
+    "passport-naver-token": "^1.0.2"
   }
 }
