--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
     "passport-kakao-token": "^0.1.5",
-    "passport-naver-token": "^1.0.2"
+    "passport-naver-token": "^1.0.2",
+    "validator": "^13.0.0"
   }
 }
