--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm start\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install —prefix client && cd client && npm run build —prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install --prefix client && cd client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
